--- a/Assignment4/src/main/resources/static/css/myStyle.css
+++ b/Assignment4/src/main/resources/static/css/myStyle.css
@@ -7,23 +7,23 @@
 .navbar-brand{
 	color: white;
 }
-#tableList {
+.tableList {
 	width : 100%;
 	margin-top : 20px;
 }
-#tableList td {
+.tableList td {
 	padding-left : 10px;
     border-bottom: 1px solid #ddd;
     height: 30px;
 }
 
-#tableList th{
+.tableList th{
 	border-bottom: 1px solid #ddd;
 	padding-left : 10px;
 	height: 40px;
 }
 
-#tableList tr:hover {background-color: #f5f5f5;}
+.tableList tr:hover {background-color: #f5f5f5;}
 
 .tableFormDetail th,td{
 	padding: 10px;
