--- a/Assignment4/src/main/resources/templates/register.html
+++ b/Assignment4/src/main/resources/templates/register.html
@@ -103,7 +103,7 @@
 		        <form name="registerForm" id="registerForm" method='post' >
 		        	<div class="form-group">
 		        		<label>Email</label>
-		        		<input type="text" name="email" id="email" class="form-control" 
+		        		<input type="email" name="email" id="email" class="form-control" 
 		        			   placeholder="Nhập Email" />
 		        		<a class='error' id='msgNoti'></a>
 		        	</div>
