--- a/Assignment4/src/main/resources/templates/home.html
+++ b/Assignment4/src/main/resources/templates/home.html
@@ -19,35 +19,38 @@
 	<input id="checkRoleUser" type="hidden" sec:authorize="hasRole('ADMIN')" value="isAdmin"/>
 	<input id="checkRoleUser" type="hidden" sec:authorize="hasRole('SUPER_ADMIN')" value="isSuperAdmin"/>
 	<input id="checkRoleUser" type="hidden" sec:authorize="hasRole('USER')" value="isUser"/>
-    <div class="navbar navbar-static-top">
+    <nav class="navbar navbar-inverse">
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<a class="navbar-brand" href="">THƯ VIỆN SÁCH</a>
 			</div>
 					
-			<form class="navbar-form navbar-left" name="searchForm" id="searchForm" onsubmit="return searchBook()">
+			<form class="navbar-form navbar-left" name="searchForm" id="searchForm" >
 				<div class="form-group">
 					<input type="text" name="keyword" id="keyword" class="form-control" placeholder="Nhập từ khóa muốn tìm">
 				</div>
-				<a class="btn btn-md btn-default" href="javascript:void(0)" onclick="searchBook()" >
-					<i class="glyphicon glyphicon-search"></i>
-		 		</a>	
+				<input type="submit" value="Tìm" class="btn btn-defalut">
 			</form>
+			
+			
      		<ul class="nav navbar-nav navbar-right">
-		      <li><label>Hi! <span sec:authentication="name"></span> </label></li>
-		      <li><a href="/register" sec:authorize="isAnonymous()"><span class="glyphicon glyphicon-log-in"></span>Đăng kí</a></li>
-		      <li><a href="/login" sec:authorize="isAnonymous()"><span class="glyphicon glyphicon-log-in"></span>Đăng nhập</a></li>
-		      <li><a href="javascript:void(0)" onclick="loadUserProfile()" sec:authorize="hasAnyRole('USER','ADMIN','SUPER_ADMIN')">Đổi mật khẩu</a></li>
+		      <li><a href="/register" sec:authorize="isAnonymous()"><span class="glyphicon glyphicon-user"></span> Đăng kí</a></li>
+		      <li><a href="/login" sec:authorize="isAnonymous()"><span class="glyphicon glyphicon-log-in"></span> Đăng nhập</a></li>
+		      <li><a href="javascript:void(0)" onclick="loadUserProfile()" 
+		      			sec:authorize="hasAnyRole('USER','ADMIN','SUPER_ADMIN')">Đổi mật khẩu</a></li>
 		      <li><a th:href="@{/logout}" sec:authorize="hasAnyRole('USER','ADMIN','SUPER_ADMIN')">Đăng xuất</a></li>
 		    </ul>
+		    
+		    <p class="navbar-text navbar-right">Hi! <span sec:authentication="name"></span></p>
 		</div>
-	</div>
+	</nav>
 	<div class="container main-container" id="menubar">
 		<a class="btn btn-md btn-primary" href="/booksListByUser" 
 			sec:authorize="hasAnyRole('USER','ADMIN','SUPER_ADMIN')" >
 			<span>Sách của bạn</span>
         </a> 
-		<a class="btn btn-md btn-default" href="/booksList">
+		<a class="btn btn-md btn-default" href="/booksList" 
+			sec:authorize="hasAnyRole('USER','ADMIN','SUPER_ADMIN')">
 			<span>Toàn bộ sách</span>
         </a> 
         
@@ -58,9 +61,13 @@
          	sec:authorize="hasAnyRole('ADMIN','SUPER_ADMIN')" >
  		 	<span>Quản lý User</span>
          </a>
-         <a class="btn btn-md btn-default" href="javascript:void(0)" onclick="loadFormAddNewUser()" 
+         <a class="btn btn-md btn-primary" href="javascript:void(0)" onclick="loadFormAddNewUser()" 
          	sec:authorize="hasAnyRole('ADMIN','SUPER_ADMIN')" >
  		 	<span>Thêm User</span>
+         </a>
+         <a class="btn btn-md btn-default" href="javascript:void(0)" onclick="loadPageUserManagement()" 
+         	sec:authorize="hasRole('SUPER_ADMIN')" >
+ 		 	<span>Quản lý User và Admin</span>
          </a>
          <p class="notiMsg error"></p>
          <p id="successMsg"></p>
@@ -74,11 +81,18 @@
 	 		</div>
  	</div>
 	<script type="text/javascript">
-	function searchBook(){
+	 function searchBook(){
 		var keyword = $('#keyword').val();
+		$.ajax({url:window.location.origin+'/booksListPage',success:function(result){
+		      $("#Content").html(result);
+		 }});
 		window.history.pushState('string', '', window.location.origin+'/searchBook/'+keyword);
-		displayBooks();
-	}
+		$('#keyword').val('');
+	} 
+	$( "#searchForm" ).submit(function( event ) {
+		  event.preventDefault();
+		  searchBook();
+		});
 	</script>
     
 </body>
