--- a/Assignment4/src/main/resources/templates/login.html
+++ b/Assignment4/src/main/resources/templates/login.html
@@ -5,6 +5,7 @@
 <title>Login Page</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script src="/js/myJavascript.js"></script> 
 	<link rel="stylesheet" href="/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/css/myStyle.css"/>
     <style>
