--- a/Assignment4/src/main/resources/templates/register.html
+++ b/Assignment4/src/main/resources/templates/register.html
@@ -6,6 +6,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script src="/js/myJavascript.js"></script> 
 	<link rel="stylesheet" href="/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/css/myStyle.css"/>
     <style>
@@ -80,12 +81,15 @@
 		   		data : JSON.stringify(newUser),
 		   		dataType : 'json',
 		   		success: function(result){		
-		   			$('#successMsg').html('Đăng kí tài khoản thành công. Nhấn đăng nhập');
+		   			//$('#successMsg').html('Đăng kí tài khoản thành công. Nhấn đăng nhập');
 		   			$('#email').val('');
 		   			$('#password').val('');
 		   			$('#confirmPassword').val('');
+		   			alert('Đăng kí tài khoản thành công.');
+		   			window.location = window.location.origin+"/login";
 		   		},
 		   		error : function(ex) {
+		   			$('#msgNoti').html(ex);
 		   			alert("ERROR: ", ex);
 		   			console.log("ERROR: ", ex);
 		   		}
